--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -7725,7 +7725,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Darren",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7744,7 +7744,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Syndra",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7763,7 +7763,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nạn Nhân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7782,7 +7782,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thủ Phạm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7801,7 +7801,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thủy Quái Leviathan",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7820,7 +7820,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Địa Quái Behemoth",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7839,7 +7839,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nortilas",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7858,7 +7858,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trái Tim Đại Dương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7877,7 +7877,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Canh Đêm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7896,7 +7896,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hộ Vệ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7915,7 +7915,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kẻ Cướp Xế Tà",
         "ar":"",
         "it":"",
         "pl":"",
