--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -296,7 +296,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Mộ Thờ Bí Ẩn",
         "ar": "",
         "it": "",
         "pl": "",
@@ -353,7 +353,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Phi Thuyền Đắm",
         "ar": "",
         "it": "",
         "pl": "",
@@ -372,7 +372,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Ravaxi",
         "ar": "",
         "it": "",
         "pl": "",
@@ -391,7 +391,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Độ Cao Gai Góc",
         "ar": "",
         "it": "",
         "pl": "",
@@ -410,7 +410,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Thành Phố Xanh Sâu Thẳm",
         "ar": "",
         "it": "",
         "pl": "",
@@ -429,7 +429,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Cảng Letin",
         "ar": "",
         "it": "",
         "pl": "",
@@ -448,7 +448,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Vùng Đất Bắc Âu",
         "ar": "",
         "it": "",
         "pl": "",
@@ -486,7 +486,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Thảm Họa Chuột Nhắt",
         "ar": "",
         "it": "",
         "pl": "",
@@ -505,7 +505,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Mưu Đồ Nhà Hát Opera",
         "ar": "",
         "it": "",
         "pl": "",
@@ -524,7 +524,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Bầy Nhầy Nhà Hát Opera",
         "ar": "",
         "it": "",
         "pl": "",
@@ -543,7 +543,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Đạo Tặc Nhà Hát Opera",
         "ar": "",
         "it": "",
         "pl": "",
