--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3602,7 +3602,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Darren - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3621,7 +3621,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Darren - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3640,7 +3640,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Darren - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3659,7 +3659,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Darren - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3678,7 +3678,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Darren - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3697,7 +3697,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Syndra - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3716,7 +3716,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Syndra - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3735,7 +3735,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Syndra - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3754,7 +3754,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Syndra - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3774,7 +3774,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nạn Nhân - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3793,7 +3793,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nạn Nhân - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3812,7 +3812,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nạn Nhân - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3831,7 +3831,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nạn Nhân - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3850,7 +3850,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nạn Nhân - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3869,7 +3869,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủ Phạm - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3888,7 +3888,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủ Phạm - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3907,7 +3907,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủ Phạm - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3926,7 +3926,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủ Phạm - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3946,7 +3946,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủy Quái Leviathan - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3965,7 +3965,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủy Quái Leviathan - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -3984,7 +3984,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủy Quái Leviathan - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4003,7 +4003,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủy Quái Leviathan - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4022,7 +4022,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thủy Quái Leviathan - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4041,7 +4041,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Địa Quái Behemoth - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4060,7 +4060,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Địa Quái Behemoth - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4079,7 +4079,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Địa Quái Behemoth - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4098,7 +4098,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Địa Quái Behemoth - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4117,7 +4117,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nortilas - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4136,7 +4136,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nortilas - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4155,7 +4155,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nortilas - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4174,7 +4174,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Trái Tim Đại Dương - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4193,7 +4193,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Trái Tim Đại Dương - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4213,7 +4213,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4232,7 +4232,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4251,7 +4251,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4270,7 +4270,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4289,7 +4289,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4308,7 +4308,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4327,7 +4327,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4346,7 +4346,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4365,7 +4365,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Canh Đêm - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4385,7 +4385,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4404,7 +4404,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4423,7 +4423,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4442,7 +4442,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4461,7 +4461,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4480,7 +4480,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4499,7 +4499,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4518,7 +4518,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4537,7 +4537,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hộ Vệ Ngày - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4557,7 +4557,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4576,7 +4576,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4595,7 +4595,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4614,7 +4614,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Giây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4633,7 +4633,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4652,7 +4652,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4671,7 +4671,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4690,7 +4690,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4709,7 +4709,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kẻ Cướp Xế Tà - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18796,7 +18796,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Thiên Thần - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18815,7 +18815,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Thiên Thần - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18834,7 +18834,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Thiên Thần - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18853,7 +18853,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Thiên Thần - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18872,7 +18872,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Ác Quỷ - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18891,7 +18891,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Ác Quỷ - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18910,7 +18910,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Ác Quỷ - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18929,7 +18929,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Ác Quỷ - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18948,7 +18948,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bươm Bướm Ánh Trăng - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18967,7 +18967,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bươm Bướm Ánh Trăng - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -18986,7 +18986,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bươm Bướm Ánh Trăng - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19005,7 +19005,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bươm Bướm Ánh Trăng - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19024,7 +19024,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Rồng - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19043,7 +19043,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Rồng - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19062,7 +19062,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Rồng - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19081,7 +19081,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Rồng - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19100,7 +19100,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hỏa Phượng Hoàng - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19119,7 +19119,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hỏa Phượng Hoàng - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19138,7 +19138,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hỏa Phượng Hoàng - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19157,7 +19157,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hỏa Phượng Hoàng - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19176,7 +19176,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Vận Mệnh - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19195,7 +19195,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Vận Mệnh - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19214,7 +19214,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Vận Mệnh - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19233,7 +19233,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Vận Mệnh - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19252,7 +19252,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19271,7 +19271,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19290,7 +19290,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19309,7 +19309,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19328,7 +19328,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus Hoàng Kim - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19347,7 +19347,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus Hoàng Kim - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19366,7 +19366,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus Hoàng Kim - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19385,7 +19385,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Pegasus Hoàng Kim - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19404,7 +19404,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Chùm - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19423,7 +19423,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Chùm - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19442,7 +19442,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Chùm - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19461,7 +19461,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Chùm - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
