Renaming wrong cannibal huha

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6218,10 +6218,10 @@
         "id":""
     },
     "item.3079.name":{
-        "en":"[Spirit Egg] Cannibal Huha",
-        "fr":"[Oeuf d'esprit] Huha Cannibale",
+        "en":"[Spirit Egg] Cursed Warrior",
+        "fr":"[Oeuf d'esprit] Guerrier Maudit",
         "es":"",
-        "zh-cn":"[精灵蛋] 食人族胡哈",
+        "zh-cn":"[精灵蛋] Cursed Warrior",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6229,7 +6229,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Huha Tộc Săn Người",
+        "vi":"[Linh Trứng] Cursed Warrior",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8156,10 +8156,10 @@
         "id":""
     },
     "item.4079.name":{
-        "en":"Cannibal Huha",
-        "fr":"Huha Cannibale",
+        "en":"Cursed Warrior",
+        "fr":"Guerrier Maudit",
         "es":"",
-        "zh-cn":"食人族胡哈",
+        "zh-cn":"",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8167,7 +8167,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Huha Tộc Săn Người",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
