--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1386,6 +1386,25 @@
         "th":"",
         "id":""
     },
+    "map.C3_Garden_Of_Chaos.name":{
+        "en":"Garden of Chaos",
+        "fr":"Jardin du Chaos",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C3_Twisters_Manor_Hall_Of_Elite.name":{
         "en":"Twister's Manor Floor Hall of Elite",
         "fr":"Manoir Méphitique Hall d'Élite",
@@ -1627,6 +1646,25 @@
         "jp":"",
         "pt":"",
         "vi":"Địa Điểm Thử Thách Của Hiệp Sĩ Thành Cain",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Challenge_45.name":{
+        "en":"Subterranean Coliseum",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
