--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5678,7 +5678,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Viêm Ma Giám Hộ Tinh Anh",
+        "vi":"[Linh Trứng] Viêm Ma Giám Hộ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8167,7 +8167,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến Binh Bị Nguyền",
         "ar":"",
         "it":"",
         "pl":"",
