--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1398,7 +1398,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vườn Hỗn Mang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1664,7 +1664,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu Trường Ngầm",
         "ar":"",
         "it":"",
         "pl":"",
