--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8159,7 +8159,7 @@
         "en":"Cursed Warrior",
         "fr":"Guerrier Maudit",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"诅咒战士",
         "zh-tw":"",
         "kr":"",
         "ru":"",
