--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1390,7 +1390,7 @@
         "en":"Garden of Chaos",
         "fr":"Jardin du Chaos",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"混沌花园",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1656,7 +1656,7 @@
         "en":"Subterranean Coliseum",
         "fr":"",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"地下竞技场",
         "zh-tw":"",
         "kr":"",
         "ru":"",
