--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -7983,7 +7983,7 @@
         "en": "MK-III Arrow Shot",
         "fr": "Tir MK-III",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "MK-III射击"",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -8002,7 +8002,7 @@
         "en": "Deploy an MK-III Arrow Shot, dealing 80% to targets in the area effect. Lasts 10 sec.",
         "fr": "Déploie un MK-III, infligeant 80% de dégâts aux cibles dans la zone. Dure 10 sec",
         "es": "",
-        "zh-cn": "使用MK-III Arrow Shot，对区域内的目标造成80%的伤害，持续10秒",
+        "zh-cn": "使用MK-III射击，对区域内的目标造成80%的伤害，持续10秒",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -8021,7 +8021,7 @@
         "en": "Arrow Shot",
         "fr": "Tir Chargé",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "射击",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -9084,8 +9084,8 @@
     "skills.TRM_VOID_SHOT.effect": {
         "en": "Shoots a void arrow at the target, dealing (1000 + 300% of target's lost MP)",
         "fr": "Tire une flèche du néant sur la cible, infligeant (1000 +300% des MP manquants de la cible)",
-        "es": "向目标射出一直虚空之箭，造成(1000+300%MP消耗值)的伤害.",
-        "zh-cn": "",
+        "es": "",
+        "zh-cn": "向目标射出一直虚空之箭，造成(1000+300%MP消耗值)的伤害.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -10605,7 +10605,7 @@
         "en": "Shocking Smash",
         "fr": "Écorche Tête",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "破碎一击",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -12277,7 +12277,7 @@
         "en": "Charge",
         "fr": "Charge",
         "es": "",
-        "zh-cn": "",
+        "zh-cn": "装载",
         "zh-tw":"",
         "kr": "",
         "ru": "",
