--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -7983,7 +7983,7 @@
         "en": "MK-III Arrow Shot",
         "fr": "Tir MK-III",
         "es": "",
-        "zh-cn": "MK-III射击"",
+        "zh-cn": "MK-III射击",
         "zh-tw":"",
         "kr": "",
         "ru": "",
