--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1854,7 +1854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mê Cung Dung Nham",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1873,7 +1873,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điện Dung Nham",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1882,7 +1882,7 @@
     },
     "map.Instance_45_map3.name":{
         "en":"Lv45 Dungeon Boss Room",
-        "fr":"Salle du Boss de Donjon Nv50",
+        "fr":"Salle du Boss de Donjon Nv45",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1892,7 +1892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phòng Quái Trùm Hầm Ngục Cấp 45",
         "ar":"",
         "it":"",
         "pl":"",
