--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6248,7 +6248,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Cá Piranha",
+        "vi":"[Linh Trứng] Cây Piranha",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8186,7 +8186,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cá Piranha",
+        "vi":"Cây Piranha",
         "ar":"",
         "it":"",
         "pl":"",
