--- a/Translation/general.json
+++ b/Translation/general.json
@@ -189,7 +189,7 @@
         "th":"",
         "id":""
     },
-    "general.POINT.MAGIPOINT":{
+    "general.POINT.BLACKMAGIC":{
         "en":"Magipoint",
         "fr":"Magie noire",
         "es":"Puntos Magicos",
