--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11917,6 +11917,44 @@
         "th":"",
         "id":""
     },
+    "item.7201.name":{
+        "en":"EXP Orb X5",
+        "fr":"Orbe EXP X5",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.7202.name":{
+        "en":"EXP Orb X10",
+        "fr":"Orbe EXP X10",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7300.name":{
         "en":"Swiftness Flask",
         "fr":"Flacon de rapidité",
