--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3773,7 +3773,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chuẩn bị đá người chơi <i>{0}</i> ra khỏi công hội. Tiếp tục chứ?",
         "ar":"",
         "it":"",
         "pl":"",
