--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11929,7 +11929,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc X5 K.Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11948,7 +11948,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc X10 K.Nghiệm",
         "ar":"",
         "it":"",
         "pl":"",
