--- a/Translation/item.json
+++ b/Translation/item.json
@@ -18822,7 +18822,7 @@
 		"th": "",
 		"id": ""
 	},
-    	"item.71001.name": {
+    "item.71001.name": {
 		"en": "Angel Wings - I",
 		"fr": "Ailes d'Ange - I",
 		"es": "",
@@ -19500,6 +19500,63 @@
 		"jp": "",
 		"pt": "",
 		"vi": "Áo Chùm - IV",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.72001.name": {
+		"en": "Nothing (placeholde) - I",
+		"fr": "Rien (tempo) - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.72002.name": {
+		"en": "Realy Nothing (placeholde) - II",
+		"fr": "Vraiment Rien (tempo) - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.72003.name": {
+		"en": "Still Nothing (placeholde) - III",
+		"fr": "Toujours Rien (tempo) - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
 		"ar": "",
 		"it": "",
 		"pl": "",
