--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -360,6 +360,44 @@
         "th": "",
         "id": ""
     },
+    "instance.INSTANCE_45.description.reward.normal":{
+        "en": "Lv40 common materials, Costume sets and Runestones.",
+        "fr": "Materiel commun Nv40, Costumes et Pierres runiques",
+        "es": "",
+        "zh-cn": "40级普通材料、套装符文石.",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "Nguyên liệu thường Cấp 40, Bộ Trang Phục và Đá Cổ Ngữ.",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_45.description.reward.special":{
+        "en": "Glory Gem",
+        "fr": "Gemme de Gloire",
+        "es": "",
+        "zh-cn": "荣誉宝石",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "Đá Vinh Quang",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "instance.INSTANCE_50.name":{
         "en": "Ravaxi",
         "fr": "Ravaxi",
