--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9998,6 +9998,44 @@
         "th":"",
         "id":""
     },
+    "item.5050.name":{
+        "en":"Wizard M",
+        "fr":"Wizard H",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5051.name":{
+        "en":"Wizard F",
+        "fr":"Wizard F",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name":{
         "en":"Initlal Hairstyle (Green)",
         "fr":"Coiffure Initiale (Vert)",
