--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10010,7 +10010,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phù Thủy Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10029,7 +10029,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phù Thủy Nam",
         "ar":"",
         "it":"",
         "pl":"",
