Social missing button

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8130,5 +8130,24 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.social.button.pm":{
+        "en":"PM",
+        "fr":"MP",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
